# mail-event-extractor

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-push.yml
docs/: code_review_findings.txt
src/mail_events_to_caldav/: __init__.py  caldav_client.py  config.py  config_manager.py  config_service.py  database.py  exceptions.py  filter.py  imap_client.py  llm_parser.py  main.py  retry.py  scheduler.py
src/protoncalbridge/: __init__.py  caldav_client.py  config.py  config_manager.py  config_service.py  database.py  exceptions.py  filter.py  imap_client.py  llm_parser.py  main.py  rate_limit.py  scheduler.py
templates/: index.html
tests/: conftest.py  test_caldav_client.py  test_config_service.py  test_filter.py  test_imap_client.py  test_llm_parser.py
